[gd_scene load_steps=5 format=2]

[ext_resource path="res://mobs/scripts/CannonBall.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="BoxShape" id=3]

[node name="CannonBall" type="Area" groups=["projectiles"]]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
collision_layer = 0
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 2 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = null

[node name="DeleteTimer" type="Timer" parent="."]

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Shakebox" type="Area" parent="."]
transform = Transform( 8, 0, 0, 0, 1.5, 0, 0, 0, 8, 0, -1.5, 0 )
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Shakebox"]
shape = SubResource( 3 )
disabled = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
[connection signal="area_entered" from="Shakebox" to="." method="_on_Shakebox_area_entered"]
